IndexedDB 2.0: Send operations off to the server in batches instead of one at a time. https://bugs.webkit.org/show_bug.cgi?id=165221

Reviewed by Myles C. Maxfield.

No new tests (No observable behavior change).

On a profile of "Lots of writes to an IndexedDB", timer scheduling/firing presented as over 10% of the time.

This patch negates much of that.

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::pendingOperationTimerFired): Send 100 operations off to the server
  before spinning the runloop, instead of only 1.


Canonical link: https://commits.webkit.org/182843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209157 268f45cc-cd09-0410-ab3c-d52691b4dbfc